--- a/photonics_sample_4.vcxproj.filters
+++ b/photonics_sample_4.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClCompile Include="surfaceplot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="linearprimitive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
